--- a/jellyfish/index.html
+++ b/jellyfish/index.html
@@ -65,10 +65,10 @@ void main(void) {
 
   float offset = smoothstep(0.0,1.,max(0.,-aVertexPosition.y-0.8)/10.);
 
-  vec3 anim = ( aVertexColor.xyz/8.0*sin(time) * (1.-offset) );
+  vec3 anim = ( aVertexColor.xyz/8.0*sin(time) * (1.-offset) );// 次变量起到让水母有呼吸的效果
   vec3 pos = aVertexPosition + anim;
 
-  //skinning
+  //skinning  此变量让水母有运动
   pos = vec3(uJoint0 * vec4(pos, 1.0))*aSkinWeight.x +
 				vec3(uJoint1 * vec4(pos, 1.0))*aSkinWeight.y +
 				vec3(uJoint2 * vec4(pos, 1.0))*aSkinWeight.z +
@@ -109,6 +109,7 @@ void main(void) {
 
 
 
+
     </script>
 
     <script id="jellyfish-fs" type="x-shader/x-fragment">
@@ -132,6 +133,7 @@ void main(void) {
 
   gl_FragColor = vec4(((vDiffuse + caustics)*colorMap.rgb) + vFresnel, colorMap.a);
 }
+
 
 
 
