--- a/jellyfish/index.html
+++ b/jellyfish/index.html
@@ -131,7 +131,7 @@ void main(void) {
         } );
     </script>
 </head>
-<body screen_capture_injected="true">
+<body>
 <div id="console">
     <div class="console-field">
     </div>
