--- a/webgl-programming-guide/ch10/Fog.html
+++ b/webgl-programming-guide/ch10/Fog.html
@@ -9,7 +9,7 @@
 <canvas id="webgl" width="400" height="400">
     Please use a browser that supports "canvas"
 </canvas>
-<p>&uarr;&darr;: Increase/decrease the fog distance</p></p>
+<p>&uarr;&darr;: Increase/decrease the fog distance</p>
 
 <script src="../lib/webgl-utils.js"></script>
 <script src="../lib/webgl-debug.js"></script>
