--- a/test/test2.html
+++ b/test/test2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test02</title>
+    <title>test</title>
     <style>
         canvas {
             width: 500px;
@@ -13,7 +13,6 @@
 <body>
 <canvas width="500" height="500"></canvas>
 <script src="../webgl-programming-guide/lib/cuon-utils.js"></script>
-<script src="../webgl-programming-guide/lib/cuon-matrix.js"></script>
 <script>
     (function () {
         var canvas = document.querySelector( "canvas" );
@@ -21,64 +20,27 @@
 
         var v_shader =
                 "attribute vec4 position;\n" +
-                "attribute vec2 v_tex_position;\n" +
-                "varying vec2 tex_position;\n" +
                 "void main(){\n" +
                 "   gl_Position = position;\n" +
-                "   tex_position = v_tex_position;\n" +
+                "   gl_PointSize = 20.0;\n" +
                 "}\n";
         var f_shader =
                 "precision mediump float;\n" +
-                "uniform  sampler2D sampler;\n" +
-                "varying vec2 tex_position;\n" +
+                "uniform vec4 color;\n" +
                 "void main(){\n" +
-                "   gl_FragColor = texture2D(sampler,tex_position);\n" +
+                "   gl_FragColor = color;" +
                 "}\n";
 
-        gl.clearColor( 0 , 0 , 0 , 1 );
-        gl.clear( gl.COLOR_BUFFER_BIT );
-
         if ( initShaders( gl , v_shader , f_shader ) ) {
-            var data = new Float32Array( [
-                0.7 , 0.7 , 1 , 1 ,
-                0.7 , -0.7 , 1 , 0 ,
-                -0.7 , -0.7 , 0 , 0 ,
-                -0.7 , 0.7 , 0 , 1
-            ] );
-            var proMatrix = new Matrix4();
-            var indexs = new Uint8Array( [ 0 , 1 , 2 , 3 ] );
-            var size = data.BYTES_PER_ELEMENT;
-            var buffer = gl.createBuffer();
-            var texture = gl.createTexture();
             var position = gl.getAttribLocation( gl.program , "position" );
-            var v_tex_position = gl.getAttribLocation( gl.program , "v_tex_position" );
-            var sampler = gl.getUniformLocation( gl.program , "sampler" );
-            gl.bindBuffer( gl.ARRAY_BUFFER , buffer );
-            gl.bufferData( gl.ARRAY_BUFFER , data , gl.STATIC_DRAW );
-            gl.vertexAttribPointer( position , 2 , gl.FLOAT , false , 4 * size , 0 );
-            gl.enableVertexAttribArray( position );
-            gl.vertexAttribPointer( v_tex_position , 2 , gl.FLOAT , false , 4 * size , 2 * size );
-            gl.enableVertexAttribArray( v_tex_position );
-            var buffer_i = gl.createBuffer();
-            gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER , buffer_i );
-            gl.bufferData( gl.ELEMENT_ARRAY_BUFFER , indexs , gl.STATIC_DRAW );
-
-            var img = new Image();
-            img.src = "img/star.jpg";
-            img.onload = function () {
-                gl.pixelStorei( gl.UNPACK_FLIP_Y_WEBGL , 1 );
-                gl.activeTexture( gl.TEXTURE0 );
-                gl.bindTexture( gl.TEXTURE_2D , texture );
-                gl.texParameteri( gl.TEXTURE_2D , gl.TEXTURE_MAG_FILTER , gl.LINEAR );
-                gl.texParameteri( gl.TEXTURE_2D , gl.TEXTURE_MIN_FILTER , gl.NEAREST );
-                gl.texImage2D( gl.TEXTURE_2D , 0 , gl.RGB , gl.RGB , gl.UNSIGNED_BYTE , img );
-                gl.uniform1i( sampler , 0 );
-                gl.clear( gl.COLOR_BUFFER_BIT );
-                gl.drawElements( gl.TRIANGLE_FAN , 4 , gl.UNSIGNED_BYTE , 0 );
-            };
-
-
+            gl.vertexAttrib4f( position , 0.5 , 0.5 , 0 , 1 );
+            var color = gl.getUniformLocation( gl.program , "color" );
+            gl.uniform4fv( color , [ 1 , 1 , 0 , 1 ] );
+            gl.clearColor( 0 , 0 , 0 , 1 );
+            gl.clear( gl.COLOR_BUFFER_BIT );
+            gl.drawArrays( gl.POINTS , 0 , 1 );
         }
+
 
     })();
 </script>
