--- a/sakura/index.html
+++ b/sakura/index.html
@@ -10,7 +10,7 @@
         padding: 0;
         margin: 0;
         overflow: hidden;
-        height: 600px;
+        height: 100%;
     }
 
     canvas {
@@ -127,6 +127,16 @@ void main(void) {
 
 
 
+
+
+
+
+
+
+
+
+
+
 </script>
 <script id="sakura_point_fsh" type="x-shader/x_fragment">
 #ifdef GL_ES
@@ -214,6 +224,16 @@ void main(void) {
 
 
 
+
+
+
+
+
+
+
+
+
+
 </script>
 <!-- effects -->
 <script id="fx_common_vsh" type="x-shader/x_vertex">
@@ -228,6 +248,16 @@ void main(void) {
     texCoord = aPosition.xy * 0.5 + vec2(0.5, 0.5);
     screenCoord = aPosition.xy * vec2(uResolution.z, 1.0);
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -278,6 +308,16 @@ void main(void) {
 
 
 
+
+
+
+
+
+
+
+
+
+
 </script>
 <script id="fx_brightbuf_fsh" type="x-shader/x_fragment">
 #ifdef GL_ES
@@ -294,6 +334,16 @@ void main(void) {
     vec4 col = texture2D(uSrc, texCoord);
     gl_FragColor = vec4(col.rgb * 2.0 - vec3(0.5), 1.0);
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -345,6 +395,16 @@ void main(void) {
 
 
 
+
+
+
+
+
+
+
+
+
+
 </script>
 <!-- effect fragment shader template -->
 <script id="fx_common_fsh" type="x-shader/x_fragment">
@@ -361,6 +421,16 @@ varying vec2 screenCoord;
 void main(void) {
     gl_FragColor = texture2D(uSrc, texCoord);
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -403,6 +473,16 @@ void main(void) {
 
 
 
+
+
+
+
+
+
+
+
+
+
 </script>
 <script id="pp_final_fsh" type="x-shader/x_fragment">
 #ifdef GL_ES
@@ -425,6 +505,16 @@ void main(void) {
     gl_FragColor = vec4(col.rgb, 1.0);
     gl_FragColor.a = 1.0;
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
